--- a/Desktop/dev/reactProject/task-one/.github/workflows/firebase-hosting.yml
+++ b/Desktop/dev/reactProject/task-one/.github/workflows/firebase-hosting.yml
@@ -3,31 +3,27 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - master # プッシュするブランチ（通常は master または main）
-  pull_request:
-    branches:
       - master
-
+  workflow_dispatch:  # 手動トリガーが可能
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
 
-      - name: Install dependencies
-        run: |
-          npm install -g firebase-tools
-          npm install
+    - name: Install dependencies
+      run: |
+        npm install
+        npm run build
 
-      - name: Firebase Deploy
-        run: |
-          firebase deploy --token $FIREBASE_TOKEN
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+    - name: Deploy to Firebase Hosting
+      uses: FirebaseExtended/action-hosting-deploy@v0
+      with:
+        token: ${{ secrets.FIREBASE_TOKEN }}
