--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:  # 手動トリガーが可能
+  workflow_dispatch: ./
 jobs:
   deploy:
     runs-on: ubuntu-latest
