プレビュー用のチャンネルIDを設定

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,5 @@ jobs:
         expires: 7d
         entryPoint: ./Desktop/dev/reactProject/task-one
         firebaseToolsVersion: latest
+        channelId: preview
 
